--- a/src/core/components/course/mini/item/_CourseMini.module.scss
+++ b/src/core/components/course/mini/item/_CourseMini.module.scss
@@ -1,4 +1,4 @@
-@import "../../../scss/vars";
+@import "../../../../scss/vars";
 
 
 .course {
@@ -17,7 +17,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    //box-shadow: 0px 4px 24px -1px rgba(0, 0, 0, 0.2);
 
     opacity: 0;
     z-index: -1;
@@ -26,13 +25,8 @@
     .blur {
       position: absolute;
       z-index: -1;
-      //opacity: 0;
       border-radius: 20px;
-      //backdrop-filter: blur(10px);
       background: $blue-pink-gradient;
-      //background: linear-gradient(-135deg, $purple 0%, $red 100%);
-      //background: $purple-red-gradient;
-      //background-color: $purple-2;
       width: 310px;
       height: 100%;
 
@@ -41,7 +35,6 @@
 
     .active {
       box-shadow: 0 0 8px 5px $black_25;
-      //opacity: 0;
 
       transition: all .3s;
     }
@@ -50,11 +43,5 @@
   &:hover .activeWrapper {
     z-index: 5;
     opacity: 1;
-    //transition: .3s;
-
-    //.blur,
-    //.active{
-    //  opacity: 1;
-    //}
   }
 }
