--- a/src/core/scss/_vars.scss
+++ b/src/core/scss/_vars.scss
@@ -2,6 +2,7 @@
 $f-black: 'Gotham-Black', sans-serif;
 $f-bold: 'Gotham-Bold', sans-serif;
 $f-medium: 'Gotham-Medium', sans-serif;
+$f-medium-italic: 'Gotham-MediumItalic', sans-serif;
 $f-book: 'Gotham-Book', sans-serif;
 
 // Font size
