--- a/src/core/components/course/mini/core/components/preview/_CourseMiniPreview.module.scss
+++ b/src/core/components/course/mini/core/components/preview/_CourseMiniPreview.module.scss
@@ -24,6 +24,8 @@
       &Self {
         position: absolute;
         width: 100%;
+        height: 100%;
+        object-fit: cover;
         z-index: 1;
         border-radius: 20px;
       }
