Create delete collection

--- a/src/core/components/collection/core/components/collection_head/collection_head/detail/_CollectionHeadDetail.module.scss
+++ b/src/core/components/collection/core/components/collection_head/collection_head/detail/_CollectionHeadDetail.module.scss
@@ -4,10 +4,18 @@
   display: flex;
   margin-left: auto;
   align-items: center;
+  max-height: 63px;
+  margin-top: auto;
+  margin-bottom: auto;
 
   .rating {
     &Button {
       margin-top: 5px;
     }
+  }
+
+  .edit, .delete {
+    margin-top: auto;
+    margin-left: 10px;
   }
 }
