Create edit collection

--- a/src/core/components/collection/big/detail/_CollectionBigDetail.module.scss
+++ b/src/core/components/collection/big/detail/_CollectionBigDetail.module.scss
@@ -8,18 +8,10 @@
 }
 
 .wrapper {
-  padding: 45px 45px 100px;
+  padding: 45px 45px 80px;
 
   .description {
-    width: 100%;
-    background-color: $black-light-3;
-    text-align: center;
-    padding: 22px 40px;
-    border-radius: 30px;
-  }
-
-  .collectionHead {
-    margin-top: 20px;
+    margin-bottom: 20px;
   }
 
   .courses {
