--- a/src/core/components/course/mini/list/_CourseMiniList.module.scss
+++ b/src/core/components/course/mini/list/_CourseMiniList.module.scss
@@ -1,3 +1,14 @@
+@import "../../../../scss/vars";
+
+.empty {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid $black-light-3;
+  border-radius: 30px;
+  padding: 50px 0;
+}
+
 .courses {
   display: grid;
   //grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
