--- a/src/core/components/modal/dark/core/components/modal-wrapper/_ModalWrapper.module.scss
+++ b/src/core/components/modal/dark/core/components/modal-wrapper/_ModalWrapper.module.scss
@@ -18,12 +18,16 @@
   flex-direction: column;
   background-color: $black-light-2;
   border-radius: 50px;
-  padding: 60px 70px 100px 70px;
+  padding: 60px 70px 70px 70px;
   margin: auto;
+  max-width: 1000px;
+  //width: 100%;
+  max-height: 850px;
 
   .title {
     &Text {
       text-align: center;
+      margin: 0 50px;
     }
     &Cross {
       width: 25px;
@@ -38,5 +42,9 @@
         scale: 1.2;
       }
     }
+  }
+
+  .content {
+    width: 100%;
   }
 }
