--- a/src/core/scss/_vars.scss
+++ b/src/core/scss/_vars.scss
@@ -31,6 +31,8 @@ $empty: #00000000;
 $purple: #7B61FF;
 $purple-2: #593BF3;
 $purple-2_70: rgba($purple-2, 0.7);
+$purple_20: rgba($purple, 0.2);
+$purple_40: rgba($purple, 0.4);
 
 $red: #FF5252;
 $red_20: rgba($red, 0.2);
@@ -44,6 +46,7 @@ $yellow_20: rgba($yellow, 0.2);
 $black: #000;
 $black_20: rgba($black, 0.2);
 $black_25: rgba($black, 0.25);
+$black_30: rgba($black, 0.3);
 $black_50: rgba($black, 0.5);
 $black_70: rgba($black, 0.7);
 
