Start course page

--- a/src/core/scss/_vars.scss
+++ b/src/core/scss/_vars.scss
@@ -6,6 +6,7 @@ $f-medium-italic: 'Gotham-MediumItalic', sans-serif;
 $f-book: 'Gotham-Book', sans-serif;
 
 // Font size
+$fs-72: 72px;
 $fs-48: 48px;
 $fs-36: 36px;
 $fs-32: 32px;
