--- a/src/core/components/course/mini/core/components/preview/_CourseMiniPreview.module.scss
+++ b/src/core/components/course/mini/core/components/preview/_CourseMiniPreview.module.scss
@@ -26,13 +26,13 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-        z-index: 1;
+        z-index: 0;
         border-radius: 20px;
       }
 
       &Dark {
         position: absolute;
-        z-index: 2;
+        z-index: 0;
         width: 100%;
         height: 100%;
         background-color: $black_70;
@@ -41,7 +41,7 @@
     }
 
     &Text {
-      z-index: 3;
+      z-index: 0;
       width: 100%;
       height: 100%;
       display: flex;
@@ -64,5 +64,9 @@
 
   .info {
     padding: 20px;
+
+    .price {
+      margin-top: 0 !important;
+    }
   }
 }
