--- a/src/core/scss/_vars.scss
+++ b/src/core/scss/_vars.scss
@@ -25,6 +25,7 @@ $black-light-1: #1A1A1A;
 $black-light-2: #1F1F1F;
 $black-light-3: #282828;
 $black-light-4: #404040;
+$black-light-5: #666666;
 
 $white: #FFF;
 $gray-1: #BFBFBF;
@@ -43,10 +44,17 @@ $red_20: rgba($red, 0.2);
 
 $green: #2ED573;
 $green-2: #19693B;
+$green-3: #3AFF8C;
 $green_20: rgba($green, 0.2);
 $dark-green: #294B37;
 
+$activity-1-5: #114828;
+$activity-6-10: #19693B;
+$activity-11-20: #2BBD69;
+$activity-21: #3AFF8C;
+
 $yellow: #FFC312;
+$yellow-dark: #534724;
 $yellow_20: rgba($yellow, 0.2);
 
 $blue: #0097E6;
