--- a/src/main/course_page/core/components/themes_part/core/components/theme/_ThemesItemCourse.module.scss
+++ b/src/main/course_page/core/components/themes_part/core/components/theme/_ThemesItemCourse.module.scss
@@ -18,6 +18,8 @@
     .title {
       max-width: 860px;
       margin-right: auto;
+      overflow: hidden;
+      text-overflow: ellipsis;
       text-align: left;
       width: 100%;
     }
