--- a/src/core/components/course/big/core/components/course_big/_CourseBig.module.scss
+++ b/src/core/components/course/big/core/components/course_big/_CourseBig.module.scss
@@ -20,7 +20,8 @@
 }
 
 .preview {
-  width: 320px;
+  max-width: 320px;
+  min-width: 320px;
   height: 100%;
   border: 2px solid $black-light-2;
   object-fit: cover;
