--- a/src/core/ui/input/edit/_InputEdit.module.scss
+++ b/src/core/ui/input/edit/_InputEdit.module.scss
@@ -27,6 +27,7 @@
   font-family: $f-medium;
   font-size: $fs-16;
   color: $white;
+  //padding: 12px 15px;
 
   transition: all .15s;
 
@@ -44,22 +45,21 @@
 }
 
 .input {
-  padding: 24px;
+  padding: 20px;
+  //background-color: $black-light-2;
 }
 
 .textarea {
-  padding: 24px;
+  padding: 15px 20px;
   height: 100%;
   min-height: 71px;
   resize: vertical;
+  //background-color: $black-light-2;
 }
 
 .error {
   display: flex;
   margin-top: 5px;
-  //display: none;
-  //opacity: 0;
-  //z-index: -1;
   cursor: default;
 
   img {
