--- a/src/main/core/wrapper/main_page_wrapper/core/components/top_bar/create_course/_TopBarCreateCourse.module.scss
+++ b/src/main/core/wrapper/main_page_wrapper/core/components/top_bar/create_course/_TopBarCreateCourse.module.scss
@@ -18,6 +18,12 @@
   display: flex;
   flex-direction: column;
   margin-left: 35px;
+
+  .description:hover {
+    .descriptionText {
+      color: $purple-2 !important;
+    }
+  }
 }
 
 .button {
