--- a/src/main/course/creating/step_detail/core/components/text/core/components/editable/_EditableDiv.module.scss
+++ b/src/main/course/creating/step_detail/core/components/text/core/components/editable/_EditableDiv.module.scss
@@ -1,14 +1,9 @@
-@import "../../../../core/scss/vars";
+@import "../../../../../../../../../../core/scss/vars";
 
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  width: 1000px;
-  position: relative;
 
+.block {
   color: $white;
   outline: none;
-  margin: 0 auto;
   //max-width: 1000px;
   white-space: pre-wrap;
   word-break: break-word;
