--- a/src/main/course/creating/step_detail/core/components/text/title/core/scss/_Title.module.scss
+++ b/src/main/course/creating/step_detail/core/components/text/title/core/scss/_Title.module.scss
@@ -1,4 +1,4 @@
-@import "../../../../../../../../core/scss/vars";
+@import "../../../../../../../../../../core/scss/vars";
 
 .title {
   font-family: $f-bold;
