--- a/src/main/core/wrapper/main_page_wrapper/_MainPageWrapper.module.scss
+++ b/src/main/core/wrapper/main_page_wrapper/_MainPageWrapper.module.scss
@@ -26,6 +26,7 @@
     display: flex;
     flex-direction: column;
     overflow-y: auto;
+    overflow-x: hidden;
     background-color: $black-light-2;
     height: 100%;
   }
