--- a/src/main/course/creating/step_detail/_StepDetailPage.module.scss
+++ b/src/main/course/creating/step_detail/_StepDetailPage.module.scss
@@ -1,20 +1,12 @@
 @import "../../../../core/scss/vars";
 
 .wrapper {
-  display: flex;
-  flex-direction: column;
-  width: 1000px;
   position: relative;
-
-  color: $white;
-  outline: none;
   margin: 0 auto;
-  //max-width: 1000px;
-  white-space: pre-wrap;
-  word-break: break-word;
+  width: 1000px;
+  height: 100%;
+}
 
-  &:empty:before {
-    content: attr(placeholder);
-    color: $gray-2;
-  }
+.editor {
+  //border: 1px solid $gray-2;
 }
