--- a/src/main/course/creating/step_detail/core/wrapper/_StepCreateCourseWrapper.module.scss
+++ b/src/main/course/creating/step_detail/core/wrapper/_StepCreateCourseWrapper.module.scss
@@ -16,3 +16,24 @@
     margin: 20px auto 30px;
   }
 }
+
+.bottomBar {
+  left: 0;
+  position: fixed;
+  width: 100%;
+  bottom: 10px;
+
+  z-index: -1;
+  opacity: 0;
+  transition: all .3s;
+
+  &This {
+    margin: 0 auto;
+    width: fit-content;
+  }
+}
+
+.active {
+  z-index: 1;
+  opacity: 1;
+}
