--- a/src/main/user/core/wrapper/core/wallpaper/_UserWallpaper.module.scss
+++ b/src/main/user/core/wrapper/core/wallpaper/_UserWallpaper.module.scss
@@ -3,6 +3,7 @@
 .wrapper {
   position: relative;
   width: 100%;
+  height: 440px;
 
   .back {
     position: relative;
@@ -35,7 +36,7 @@
   .front {
     position: absolute;
     width: 100%;
-    height: calc(100% - 4px);
+    height: 100%;
     top: 0;
 
     &Wrapper {
